add 'cross road' sensor as agent possible input, also add this sensor to currently used

--- a/envs/gym_car_intersect_fixed/settings_sets/env_settings__basic_straight_line.json
+++ b/envs/gym_car_intersect_fixed/settings_sets/env_settings__basic_straight_line.json
@@ -30,7 +30,7 @@
   },
   "state_config": {
     "picture": false,
-    "vector_car_features": ["hull_position", "hull_angle", "car_speed"],
+    "vector_car_features": ["hull_position", "hull_angle", "car_speed", "cross_road_sensor"],
     "vector_env_features": []
   },
   "reward": {
