add displacement reward

--- a/envs/gym_car_intersect_fixed/settings_sets/env_settings__Image.json
+++ b/envs/gym_car_intersect_fixed/settings_sets/env_settings__Image.json
@@ -47,6 +47,7 @@
 
     "new_tiles_count": 1.0,
     "speed_multiplication_bonus": 0.0,
+    "displacement": 1.0,
 
     "speed_per_point": 0.001,
     "if_speed_more_then_threshold": 0.0,
