--- a/envs/gym_car_intersect_fixed/settings_sets/env_settings__Image_OnlyFinalR.json
+++ b/envs/gym_car_intersect_fixed/settings_sets/env_settings__Image_OnlyFinalR.json
@@ -48,6 +48,7 @@
     "new_tiles_count": 0.0,
     "speed_multiplication_bonus": 0.0,
     "displacement": 0.0,
+    "max_episode_len": 500,
     "track_progress_as_final_reward": 10,
 
     "speed_per_point": 0.0,
