--- a/envs/gym_car_intersect_fixed/settings_sets/env_settings__Image.json
+++ b/envs/gym_car_intersect_fixed/settings_sets/env_settings__Image.json
@@ -49,6 +49,7 @@
     "speed_multiplication_bonus": 0.0,
     "displacement": 0.0,
     "track_progress_as_final_reward": 10,
+    "track_progress_as_usual_reward": 1,
 
     "speed_per_point": 0.0,
     "if_speed_more_then_threshold": 0.0,
