prepare and launch series with other bots, 2

--- a/envs/gym_car_intersect_fixed/settings_sets/env_settings__Line_with_Bot.json
+++ b/envs/gym_car_intersect_fixed/settings_sets/env_settings__Line_with_Bot.json
@@ -30,7 +30,7 @@
   },
   "state_config": {
     "picture": false,
-    "vector_car_features": ["hull_position", "hull_angle", "cross_road_sensor", "collide_sensor"],
+    "vector_car_features": ["hull_position", "hull_angle", "cross_road_sensor", "collide_sensor", "car_radar_2"],
     "vector_env_features": []
   },
   "reward": {
