--- a/env/settings_sets/env_settings__Image.json
+++ b/env/settings_sets/env_settings__Image.json
@@ -1,8 +1,8 @@
 {
   "name": "Basic, straight line",
-  "cars_path": "envs/gym_car_intersect_fixed/env_data/cars",
-  "background_path": "envs/gym_car_intersect_fixed/env_data/tracks/background_image_1520_1520.jpg",
-  "annotation_path": "envs/gym_car_intersect_fixed/env_data/tracks/CarRacing_sq_extended_v2.0.xml",
+  "cars_path": "env/env_data/cars",
+  "background_path": "env/env_data/tracks/background_image_1520_1520.jpg",
+  "annotation_path": "env/env_data/tracks/CarRacing_sq_extended_v2.0.xml",
   "TRACK_USER_INFO_NOT_A_SETTINGS": {
     "agent_track": {
       "0": "line",
