--- a/env/settings_sets/env_settings__basic_straight_line.json
+++ b/env/settings_sets/env_settings__basic_straight_line.json
@@ -1,8 +1,8 @@
 {
   "name": "Basic, straight line",
-  "cars_path": "env_data/cars",
-  "background_path": "env_data/tracks/background_image_1520_1520.jpg",
-  "annotation_path": "env_data/tracks/CarRacing_sq_extended_v2.0.xml",
+  "cars_path": "env/env_data/cars",
+  "background_path": "env/env_data/tracks/background_image_1520_1520.jpg",
+  "annotation_path": "env/env_data/tracks/CarRacing_sq_extended_v2.0.xml",
   "TRACK_USER_INFO_NOT_A_SETTINGS": {
     "agent_track": {
       "0": "line",
@@ -16,7 +16,7 @@
       "bot_number": "just number of bot which will appear in a single moment"
     }
   },
-  "agent_tracks" : [1],
+  "agent_tracks" : [0],
   "agent_image_indexes": [0],
   "bot_number" : 0,
   "bots_tracks": [0],
