fix yaml env creating

--- a/env/configs/basic_REWARD_config.yaml
+++ b/env/configs/basic_REWARD_config.yaml
@@ -32,6 +32,6 @@ reward:
 
 # Done flags
 done:
-  true_flags_to_done": ["is_out_of_road", "is_out_of_map", "is_out_of_track", "is_finish"]
-  false_flags_to_done" : []
+  true_flags_to_done: ["is_out_of_road", "is_out_of_map", "is_out_of_track", "is_finish"]
+  false_flags_to_done : []
 ...
