--- a/env/configs/minimal_REWARD_config.yaml
+++ b/env/configs/minimal_REWARD_config.yaml
@@ -16,5 +16,5 @@ reward:
 
 # Done flags
 done:
-  true_flags_to_done": ["is_out_of_road", "is_out_of_map", "is_out_of_track", "is_finish"]
+  true_flags_to_done: ["is_out_of_road", "is_out_of_map", "is_out_of_track", "is_finish"]
 ...
