--- a/experiments_sets/rainbow_test.yaml
+++ b/experiments_sets/rainbow_test.yaml
@@ -7,10 +7,10 @@ env:
 
 # Agents to use, with theirs configs
 agents:
-  ppo: ppo/ppo_test_config.yaml
+  rainbow: rainbow/rainbow_test_config.yaml
 
 # Common part of logger config
-general_config: general_test_config.yaml
+general_config: general_config.yaml
 
 #   All possible features names:
 #     'hull_position', 'hull_angle', 'car_speed', 'wheels_positions',
@@ -23,10 +23,18 @@ general_config: general_test_config.yaml
 env_changes:
   - state:
       picture: false
-      vector_car_features: ["hull_angle", "hull_position", "checkpoint_sensor", "car_speed"]
-  - state:
-      picture: true
-      vector_car_features: ["hull_angle", "hull_position", "checkpoint_sensor", "car_speed"]
+      vector_car_features: ["hull_angle", "hull_position", "car_speed"]
+
   - state:
       picture: true
       vector_car_features: []
+      
+  - state:
+      picture: true
+      vector_car_features: ["hull_angle", "hull_position", "car_speed"]
+
+
+# Local agent change
+#agent_changes:
+#  td3:
+#    - num_episodes_to_run: 200
