--- a/general_config.yaml
+++ b/general_config.yaml
@@ -2,3 +2,6 @@
 log_interval: 20
 animation_record_frequency: 100
 record_animation: true
+
+env_steps_to_run : 7500000 # 500 * 15k
+max_episode_len: 500
