--- a/ppo/ppo_config.yaml
+++ b/ppo/ppo_config.yaml
@@ -10,8 +10,9 @@ icm_config:
 #animation_record_frequency: 100
 #record_animation: _args.record_animation
 
-num_episodes_to_run: 20000
+env_steps_to_run : 7500000 # 500 * 15k
 max_episode_len: 500
+
 
 update_every_n_steps: 3000
 learning_updates_per_learning_session: 1
