prepare for mass image test

--- a/experiments_sets/all_agent_image_test.yaml
+++ b/experiments_sets/all_agent_image_test.yaml
@@ -9,7 +9,7 @@ env:
 agents:
   ppo: ppo/ppo_test_config.yaml
   rainbow: rainbow/rainbow_test_config.yaml
-  td3: td3/td3_test_config.yaml
+#  td3: td3/td3_test_config.yaml
 
 
 
