--- a/ppo/ppo_config.yaml
+++ b/ppo/ppo_config.yaml
@@ -10,7 +10,7 @@ icm_config:
 #animation_record_frequency: 100
 #record_animation: _args.record_animation
 
-track_progress_success_threshold: 0.95
+#track_progress_success_threshold: 0.95
 env_steps_to_run : 7500000 # 500 * 15k
 max_episode_len: 500
 
