to launch single td3 with bots

--- a/experiments_sets/td3_final_bots_IMAGE.yaml
+++ b/experiments_sets/td3_final_bots_IMAGE.yaml
@@ -33,6 +33,6 @@ env_changes:
       picture: true
       vector_car_features: ["hull_position", "hull_angle"]
 
-  - state:
-      picture: true
-      vector_car_features: ["hull_position", "hull_angle", "car_radar_2", "collide_sensor"]
+#  - state:
+#      picture: true
+#      vector_car_features: ["hull_position", "hull_angle", "car_radar_2", "collide_sensor"]
