--- a/general_test_config.yaml
+++ b/general_test_config.yaml
@@ -1,7 +1,8 @@
 # This part of config s common for all agents and contain technical params.
 log_interval: 2
-animation_record_frequency: 10
+animation_record_frequency: 2
+wandb_animation_frequency: 1 # among usual animation freq
 record_animation: true
 
-env_steps_to_run : 1750
+env_steps_to_run : 2750
 max_episode_len: 500
