--- a/requirements.txt
+++ b/requirements.txt
@@ -70,9 +70,8 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 memory-profiler==0.57.0
 mistune==0.8.4
-mkl-fft==1.0.14
-mkl-random==1.1.0
-mkl-service==2.3.0
+mkl-fft
+mkl-random
 moviepy==1.0.1
 nbconvert==5.6.0
 nbformat==4.4.0
