--- a/env/configs/basic_STATE_config.yaml
+++ b/env/configs/basic_STATE_config.yaml
@@ -18,6 +18,13 @@ state:
   # Use or not to use image. If "false", in observation dict it will appear as None.
   picture: false
 
+  # show or not checkpoint on image, unused if `picture` is false
+  checkpoints:
+    show: false
+    size: 10
+    hide_on_reach: true
+
+
   # List of car features to use.
   #   Fill it as [] for empty list, in this case observation dict it will appear as None.
   #   This field in observation dict is vector.
