--- a/env/visual_player_simple_configs/rotate_config.yaml
+++ b/env/visual_player_simple_configs/rotate_config.yaml
@@ -49,8 +49,8 @@ reward:
   idleness__punish_value: 0.0
 
   #
-  new_tiles_count: 0.0
-  speed_multiplication_bonus: 0.0005
+  new_tiles_count: 0.5
+  speed_multiplication_bonus: 0.0000
 
   speed_per_point: 0.0
 
@@ -82,7 +82,13 @@ bots_tracks: []
 state:
 
   # Use or not to use image. If "false", in observation dict it will appear as None.
-  picture: false
+  picture: true
+
+  # show or not checkpoint on image, unused if `picture` is false
+  checkpoints:
+    show: true
+    size: 8
+    hide_on_reach: true
 
   # List of car features to use.
   #   Fill it as [] for empty list, in this case observation dict it will appear as None.
