--- a/env/visual_player_simple_configs/rotate_config.yaml
+++ b/env/visual_player_simple_configs/rotate_config.yaml
@@ -61,6 +61,7 @@ reward:
 
 # Done flags
 done:
+#  true_flags_to_done: ["is_out_of_map", "is_finish"]
   true_flags_to_done: ["is_out_of_road", "is_out_of_map", "is_out_of_track", "is_finish"]
   false_flags_to_done : []
 
@@ -87,7 +88,6 @@ state:
   # show or not checkpoint on image, unused if `picture` is false
   checkpoints:
     show: true
-    size: 8
     hide_on_reach: true
 
   # List of car features to use.
