--- a/experiments_sets/ppo_image_rotate.yaml
+++ b/experiments_sets/ppo_image_rotate.yaml
@@ -24,5 +24,9 @@ env_changes:
   - agent_tracks : ["rotate"]
     state:
       picture: true
+      checkpoints:
+        show: true
+        hide_on_reach: true
       vector_car_features: []
+
 
