some changes in trackpoint representation

--- a/env/configs/basic_STATE_config.yaml
+++ b/env/configs/basic_STATE_config.yaml
@@ -16,14 +16,13 @@ bots_tracks: []
 state:
 
   # Use or not to use image. If "false", in observation dict it will appear as None.
-  picture: false
+  picture: true
 
   # show or not checkpoint on image, unused if `picture` is false
   checkpoints:
     show: false
-    size: 10
+    size: 25
     hide_on_reach: true
-
 
   # List of car features to use.
   #   Fill it as [] for empty list, in this case observation dict it will appear as None.
@@ -49,4 +48,5 @@ state:
 steer_policy:
   angle_steer: false
   angle_steer_multiplication: 5.0
+
 ...
