--- a/experiments_sets/ppo_image_rotate.yaml
+++ b/experiments_sets/ppo_image_rotate.yaml
@@ -26,6 +26,7 @@ env_changes:
       picture: true
       checkpoints:
         show: true
+        size: 25
         hide_on_reach: true
       vector_car_features: []
 
