--- a/env/visual_player_simple_configs/rotate_config.yaml
+++ b/env/visual_player_simple_configs/rotate_config.yaml
@@ -23,7 +23,7 @@ image_scale:
 
   # or theses
   image_target_size: [84, 84]
-  relative_car_scale: 0.9
+  relative_car_scale: 0.8
 
   # Coefficient of image scaling (both background and cars) while record animation,
   #   smth like trade-off between quality and disk memory efficiency.
@@ -88,6 +88,7 @@ state:
   # show or not checkpoint on image, unused if `picture` is false
   checkpoints:
     show: true
+    size: 25
     hide_on_reach: true
 
   # List of car features to use.
