drq origin, increase exploration

--- a/drq/drq_full_config.yaml
+++ b/drq/drq_full_config.yaml
@@ -87,7 +87,8 @@ state:
 
   # show or not checkpoint on image, unused if `picture` is false
   checkpoints:
-    show: true
+    show: false
+    size: 10
     hide_on_reach: true
 
   # List of car features to use.
