drq, with checkpoint=10

--- a/drq/drq_full_config.yaml
+++ b/drq/drq_full_config.yaml
@@ -87,7 +87,7 @@ state:
 
   # show or not checkpoint on image, unused if `picture` is false
   checkpoints:
-    show: false
+    show: true
     size: 10
     hide_on_reach: true
 
