--- a/env/configs/basic_PATH_config.yaml
+++ b/env/configs/basic_PATH_config.yaml
@@ -16,15 +16,7 @@ annotation_path: "env/env_data/tracks/named_track_annotation_v1.2.xml"
 # Scales to resize background image and cars image,
 #   something like compression for better performance
 image_scale:
-  # set these params
-#  back_image_scale_factor: 0.12
-#  car_image_scale_factor: 0.1
-
-  # or theses
   image_target_size: [84, 84]
   relative_car_scale: 0.8
-
-  # Coefficient of image scaling (both background and cars) while record animation,
-  #   smth like trade-off between quality and disk memory efficiency.
-  image_scale_for_animation_records: 0.5
+  animation_target_size: [300, 300]
 ...
