fix bugs in drq in BOTH mode, prepare drq for BOTH mode

--- a/drq/drq_full_config.yaml
+++ b/drq/drq_full_config.yaml
@@ -93,7 +93,7 @@ state:
   #     'collide_sensor', 'checkpoint_sensor',
   #     'car_radar_1', 'car_radar_2', 'car_radar_3',
   #     'time'
-  vector_car_features: []
+  vector_car_features: ['hull_position', 'hull_angle', 'car_speed']
 
   # Unused field, but actually env can return vector description of track's polygons
   #   All possible features names:
