--- a/ppo/ppo_config.yaml
+++ b/ppo/ppo_config.yaml
@@ -10,6 +10,12 @@ icm_gradient_clipping: 1.5
 drq_padding: 2
 drq_augment_num: 1 # excluding original state
 
+# loss clipping
+loss_actor_clip_value: null # number or null
+loss_critic_clip_value: null # number or null
+entropy_clip_value: null # number or null
+loss_clip_value: null # number or null
+
 
 # cheet reward
 linear_negative_reward_drop_steps: -1
