add random start position for agent car

--- a/general_config.yaml
+++ b/general_config.yaml
@@ -1,5 +1,6 @@
 # This part of config s common for all agents and contain technical params.
 log_interval: 20
+eval_episode_freq: 2
 animation_record_frequency: 100
 wandb_animation_frequency: 5 # among usual animation freq
 record_animation: true
