--- a/env/configs/persistent_STATE_config.yaml
+++ b/env/configs/persistent_STATE_config.yaml
@@ -12,8 +12,9 @@ bot_number : 0
 #   For each newly generated bot arbitrary track will be picked.
 bots_tracks: []
 
+
 # use on not random start position (on track)
-random_start_position: false
+random_start_position: true
 random_start_position_bots: false
 
 # Config of agent's observation
