add ppo exp settings for random position

--- a/experiments_sets/ppo_both_rotate.yaml
+++ b/experiments_sets/ppo_both_rotate.yaml
@@ -22,6 +22,8 @@ general_config: general_config.yaml
 # Local env changes
 env_changes:
   - agent_tracks : ["rotate"]
+    random_start_position: true
+    random_start_position_bots: false
     state:
       picture: true
       checkpoints:
