rnd remove sticky action, increase reward per speed

--- a/rnd_continues/config.conf
+++ b/rnd_continues/config.conf
@@ -32,7 +32,7 @@ Epoch = 4
 MiniBatch = 4
 PPOEps = 0.1
 IntCoef = 1.
-StickyAction = True
+StickyAction = False
 ActionProb = 0.25
 UpdateProportion = 0.25
 LifeDone = False
