--- a/conda_environment.yml
+++ b/conda_environment.yml
@@ -5,50 +5,50 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - blas=1.0=mkl
-  - ca-certificates=2019.11.27=0
-  - certifi=2019.11.28=py36_0
-  - cffi=1.13.2=py36h2e261b9_0
-  - cudatoolkit=10.1.243=h6bb024c_0
-  - filelock=3.0.12=py_0
-  - freetype=2.9.1=h8a8886c_1
-  - intel-openmp=2019.4=243
-  - jpeg=9b=h024ee3a_2
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libprotobuf=3.9.2=hd408876_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.1.0=h2733197_0
-  - mkl=2019.4=243
-  - mkl-service=2.3.0=py36he904b0f_0
-  - mkl_fft=1.0.14=py36ha843d7b_0
-  - mkl_random=1.1.0=py36hd6b4f25_0
-  - ncurses=6.1=he6710b0_1
-  - ninja=1.9.0=py36hfd86e86_0
-  - numpy-base=1.17.2=py36hde5b4d6_0
-  - olefile=0.46=py_0
-  - opencv3=3.1.0=py36_0
-  - openssl=1.1.1=h7b6447c_0
-  - pcre=8.43=he6710b0_0
-  - pip=19.3.1=py36_0
-  - pycparser=2.19=py_0
-  - python=3.6.9=h265db76_0
-  - pytorch=1.3.1=py3.6_cuda10.1.243_cudnn7.6.3_0
-  - readline=7.0=h7b6447c_5
-  - setuptools=41.6.0=py36_0
-  - six=1.12.0=py36_0
-  - sqlite=3.30.1=h7b6447c_0
-  - swig=3.0.12=h38cdd7d_3
-  - tk=8.6.8=hbc83047_0
-  - typing_extensions=3.7.4=py36_0
-  - wheel=0.33.6=py36_0
-  - xz=5.2.4=h14c3975_4
-  - zlib=1.2.11=h7b6447c_3
-  - zstd=1.3.7=h0b5b093_0
+  - _libgcc_mutex=0.1
+  - blas=1.0
+  - ca-certificates=2019.11.27
+  - certifi=2019.11.28
+  - cffi=1.13.2
+  - cudatoolkit=10.1.243
+  - filelock=3.0.12
+  - freetype=2.9.1
+  - intel-openmp=2019.4
+  - jpeg=9b
+  - libedit=3.1.20181209
+  - libffi=3.2.1
+  - libgcc-ng=9.1.0
+  - libgfortran-ng=7.3.0
+  - libpng=1.6.37
+  - libprotobuf=3.9.2
+  - libstdcxx-ng=9.1.0
+  - libtiff=4.1.0
+  - mkl=2019.4
+  - mkl-service=2.3.0
+  - mkl_fft=1.0.14
+  - mkl_random=1.1.0
+  - ncurses=6.1
+  - ninja=1.9.0
+  - numpy-base=1.17.2
+  - olefile=0.46
+  - opencv3=3.1.0
+  - openssl=1.1.1
+  - pcre=8.43
+  - pip=19.3.1
+  - pycparser=2.19
+  - python=3.6.9
+  - pytorch=1.3.1
+  - readline=7.0
+  - setuptools=41.6.0
+  - six=1.12.0
+  - sqlite=3.30.1
+  - swig=3.0.12
+  - tk=8.6.8
+  - typing_extensions=3.7.4
+  - wheel=0.33.6
+  - xz=5.2.4
+  - zlib=1.2.11
+  - zstd=1.3.7
   - pip:
     - absl-py==0.8.0
     - astor==0.8.0
