--- a/Dockerfile_condaEnv
+++ b/Dockerfile_condaEnv
@@ -33,6 +33,8 @@ RUN conda activate CDS_Lab
 RUN apt-get -y install cuda-libraries-dev-10-0
 RUN pip install -q "cupy-cuda100 ${CUPY_VERSION}"
 
+RUN pip install torch==1.5.1+cu101
+
 ENV OMP_NUM_THREADS=1
 ENV MKL_NUM_THREADS=1
 
